# Rapid7InsightVM-automation-library

./: .gitignore
.github/: dependabot.yml
1Password/: connector_1password_epm.json  trigger_1password_epm.json
AWS/: CHANGELOG.md  connector_aws_device_assets.json  connector_aws_user_assets.json  connector_s3_cloudfront.json  connector_s3_flowlogs.json  connector_s3_flowlogs_parquet.json  connector_s3_logs.json  connector_s3_ocsf.json  connector_s3_records.json  connector_sqs_messages.json  manifest.json  pyproject.toml  trigger_s3_cloudfront.json  trigger_s3_flowlogs.json  trigger_s3_flowlogs_parquet.json  trigger_s3_logs.json  trigger_s3_ocsf.json  trigger_s3_records.json  trigger_sqs_messages.json
AWS STS/: manifest.json  pyproject.toml  test_end_to_end_action.py  test_end_to_end_connector.py
Akamai/: connector_akamai_waf_logs.json  pyproject.toml  trigger_akamai_waf_logs.json
Azure/: connector_azure_blob_storage_events.json  connector_azure_eventhub.json  connector_azure_flow_logs_collector.json  (+6 more)
MicrosoftDefender/: CHANGELOG.md  connector_microsoft_defender_xdr.json  main.py  manifest.json  pyproject.toml  trigger_microsoft_defender_xdr.json
MicrosoftDefender/microsoftdefender_modules/: connector_microsoft_defender_xdr.py  metrics.py  models.py
MicrosoftDefender/microsoftdefender_modules/client/: __init__.py  auth.py
MicrosoftDefender/tests/: test_connector_microsoft_defender_xdr.py
Rapid7InsightVM/: CHANGELOG.md  action_get_asset.json  action_get_asset_vulnerabilities.json  action_get_remediated_findings.json  action_get_vulnerability.json  action_search_assets.json  action_search_vulnerabilities.json  connector_pull_assets_vulns.json  main.py  manifest.json  manifest.json.bak  pyproject.toml
Rapid7InsightVM/formats/_meta/: schema.yml
Rapid7InsightVM/formats/ingest/: parser.yml
Rapid7InsightVM/formats/ingest/tests/: expected_new_finding.json  expected_remediated_finding.json  test_new_finding.json  test_remediated_finding.json
Rapid7InsightVM/rapid7insightvm_modules/: __init__.py  client.py  connector.py  models.py
Rapid7InsightVM/rapid7insightvm_modules/actions/: get_asset.py  get_asset_vulnerabilities.py  get_remediated_findings.py  get_vulnerability.py  search_assets.py  search_vulnerabilities.py
Rapid7InsightVM/tests/: conftest.py  test_actions.py  test_actions_new.py  test_client.py  test_connector.py
TrendMicro/: CHANGELOG.md  connector_email_sec.json  connector_vision_one_oat.json  connector_vision_one_workbench.json  manifest.json  pyproject.toml  trigger_email_sec.json  trigger_vision_one_oat.json  trigger_vision_one_workbench.json
TrendMicro/tests/: test_trigger_email_sec.py
TrendMicro/trendmicro_modules/: metrics.py  models.py  trigger_email_sec.py  trigger_vision_one_base.py  trigger_vision_one_oat.py
(+402 files in other folders)
