[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation module for MicrosoftDefender"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py38"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sekoia-automation-sdk = "^1.22.4"
structlog = "^25.5.0"
stix2-patterns = "^2.1.2"
requests = "^2.32.5"
requests-ratelimiter = "^0.7.0"
msal = "^1.35.1"
cachetools = "^7.0.5"
orjson = "^3.11.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"

[tool.coverage.run]
omit = ["tests/*", "main.py"]
