[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation Module for Trend Micro Email Security"
description = ""
version = "0.0"
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py38"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sekoia-automation-sdk = "^1.22.4"
requests = "^2.32.5"
orjson = "^3.11.7"
structlog = "^25.5.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"

[tool.coverage.run]
omit = ["tests/*", "main.py", "dev.py"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "  --strict-markers\n  --tb=short\n  --cov=trendmicro_modules\n  --cov-branch\n  --cache-clear\n  --cov-report=html\n  --cov-report=term-missing:skip-covered\n  --cov-fail-under=5\n  --capture=sys\n"
